Changelog for 1.4 Series
Released 2014-09-15

Changelog for 1.4.8
* Fixed end-date not a date widget on employee div (Chris T)
* Fixed errors saving person as employee on contacts screen (Chris T)
* Added min empty lines for orders, invoices, and gl (Chris T, 1277)
* Fixed 1280, credit/debit invoices flipping signs (Chris T)

Chris T is Chris Travers

Changelog for 1.4.7
* Fixed 1231, lack of validation on forms leads to Perl errors (Chris T)
* Fixed 1264, account numbers out of place on PNL (Chris T)
* Fixed 1268, name not clickable on customer/vendor searches (Chris T)
* Fixed 1274, error on posting payment reversals w. dd/mm/yyy dates (Chris T)
* Fixed 1227, 1252, added batch printing via batches (Chris T)
* Fixed bug 1275, post error due to trying to double encode arry (Chris T)
* Fixing position of returns checkbox on account screen (Chris T)
* Fixed bug 1278, multi-language templates not stored in db (Chris T)

Chris T is Chris Travers

Changelog for 1.4.6
* Fixed bug 1259, id from new_shipto overwrites form-id (Pongracz I)
* Fixed related bug to 1259 on invoices (Chris T)
* Updated Dutch translation (Frans S and Erik H)
* New returns-specific logic (see release notes) (Chris T)
* Fixed bug 1262, cannot post overpayment with formatted nums (Chris T)
* Fixed bug 1263, error when control_code not filled in (chris T)
* Fixed update button not showing after save (Chris T)
* Fixed bug 1260, Multiple vendor skus breaks display of invoice (Chris T)
* Removed buggy batch printing interface (Chris T)
* Added search for approved batches (Chris T)
* Fixed PGNumber error when posting gl entry (Chris T)
* Fixed bug 1273, some invoices cannot be opened (John L)

Pongracz I is Pongracz Istvan
Chris T is Chris Travers
Frans S is Frans van der Star
Erik H is Erik Huelsmann
John L is John Locke

Changelog for 1.4.5
* Fixed bug 1245, print and email buttons lost after email invoice (Chris T)
* Fixed bug 1246, entity-level addresses do not show on invoice (Chris T)