@@ -233,3 +233,10 @@ UPDATE invoice SET vendor_sku = (select min(partnumber) from partsvendor
                                 )
  WHERE trans_id in (select id from ap);
 COMMIT;
+
+BEGIN;
+ALTER TABLE ar ADD setting_sequence TEXT;
+ALTER TABLE ar DROP CONSTRAINT ar_invnumber_key;
+ALTER TABLE ar ADD CHECK(invnumber is not null OR not approved);
+CREATE UNIQUE INDEX ar_invnumber_key_p ON ar(invnumber) where invnumber is not null;
+COMMIT;
